--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+  
+<body style="background-color:gold;">
+<title>About</title>
 </head>
 <body>
 
@@ -9,4 +11,5 @@
 <p>This is a paragraph.</p>
 
 </body>
-</html>
+</html>  
+ 
