--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   
-<body style="background-color:tomato;">
+<body style="background-color:red;">
 <title>About</title>
 </head>
 <body>
