--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<h4>ramachandran narayanan</h4>
-<p>Hey</p>
+<h4 style="color:brown;">ramachandran narayanan</h4>
+<p style="color:brown;">Hey</p>
 
 </body>
 </html>  
