--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
   
 <body style="background-color:gold;">
-<title>About</title>
+<title>ramachandran narayanan</title>
 </head>
 <body>
 
 <h4 style="color:brown;">ramachandran narayanan</h4>
-<p style="color:brown;">Hey</p>
+<p style="color:brown;">Hey</p> <br><br>
+  
+<h1>You can visit my social media profiles here</h1>
+  
+<p style="color:blue;"><a href="https://www.facebook.com/ramachandran.narayanan.754/">facebook</a></p><br>
+<p style="color:pink;"><a href="https://www.instagram.com/ramachandran.n/">instagram</a></p>
 
 </body>
 </html>  
