--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <h4 style="color:brown;">ramachandran narayanan</h4>
 <p style="color:brown;">Hey</p> <br><br>
   
-<h1>You can visit my social media profiles here</h1>
+<h1 style="color:brown;">You can visit my social media profiles here</h1>
   
-<p style="color:blue;"><a href="https://www.facebook.com/ramachandran.narayanan.754/">facebook</a></p><br>
+<p style="color:blue;"><a href="https://www.facebook.com/ramachandran.narayanan.754/">facebook</a></p> 
 <p style="color:pink;"><a href="https://www.instagram.com/ramachandran.n/">instagram</a></p>
 
 </body>
