--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   
-<body style="background-color:gold;">
+<body style="background-color:black;">
 <title>ramachandran narayanan</title>
 </head>
 <body>
@@ -10,7 +10,7 @@
 <h4 style="color:brown;">ramachandran narayanan</h4>
 <p style="color:brown;">Hey</p> <br><br>
   
-<h1 style="color:brown;">You can visit my social media profiles here</h1>
+<h2 style="color:brown;">You can visit my social media profiles here</h2>
   
 <p style="color:blue;"><a href="https://www.facebook.com/ramachandran.narayanan.754/">facebook</a></p> 
 <p style="color:pink;"><a href="https://www.instagram.com/ramachandran.n/">instagram</a></p>
