--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   
 <h2 style="color:brown;">You can visit my social media profiles here</h2>
   
-<p style="color:blue;"><a href="https://www.facebook.com/ramachandran.narayanan.754/">facebook</a></p> 
-<p style="color:pink;"><a href="https://www.instagram.com/ramachandran.n/">instagram</a></p>
+<p style="color:blue;"><a href="https://www.facebook.com/ramachandran.narayanan.754/"  target="_blank">facebook</a></p> 
+<p style="color:pink;"><a href="https://www.instagram.com/ramachandran.n/" target="_blank">instagram</a></p>
 
 </body>
 </html>  
